--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+html,
+body {
+    height: 100%;
+    margin: 0;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -74,4 +80,11 @@ body {
     color: white;
     font-weight: bold;
     padding: 6px 8px;
+}
+
+footer {
+    margin-top: auto;
+    text-align: center;
+    color: beige;
+    background-color: gray;
 }
